force-app/main/default/objects/AO_Availability_Log__c/AO_Availability_Log__c.object-meta.xml
<CustomObject>
    <label>AO Availability Log</label>
    <nameField>
        <displayFormat>AO-LOG-{0000000}</displayFormat>
        <label>Availability Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AO Availability Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>