force-app/main/default/objects/AO_Availability_Log__c/fields/AO_Availability__c.field-meta.xml
<CustomField>
    <fullName>AO_Availability__c</fullName>
    <label>AO Availability</label>
    <referenceTo>AO_Availability__c</referenceTo>
    <relationshipName>Availability_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>