force-app/main/default/objects/AO_Availability_Log__c/fields/Break_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Start_Time__c</fullName>
    <label>Break Start Time</label>
    <type>DateTime</type>
</CustomField>