force-app/main/default/objects/AO_Availability_Log__c/fields/Break_TIme__c.field-meta.xml
<CustomField>
    <fullName>Break_TIme__c</fullName>
    <formula>(Break_End_Time__c-Break_Start_Time__c)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break TIme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>