force-app/main/default/objects/AO_Availability_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Break_Duration__c</columns>
    <columns>Break_TIme__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>